--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,6 +22,13 @@ body {
   padding: 1.5rem;
   border-radius: 1rem;
   gap: 0.5rem;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  position: static;
+  margin-top: 5%;
 }
 
 .pantalla {
@@ -34,6 +41,7 @@ body {
   margin-bottom: 1rem;
   font-family: monospace;
   font-weight: 600;
+  
 }
 
 .btn {
@@ -54,6 +62,14 @@ body {
 
 #cero {
   grid-column: span 2;
+}
+
+#c{
+  background-color: #e6394a;
+}
+
+#c:hover{
+  background-color: #e65766;
 }
 
 #igual {
